# LeetCode

./: .gitignore  CMakeLists.txt  README.md
Algorithms/: 1091_ShortestPathInBinaryMatrix.cpp  1143_LongestCommonSubsequence.cpp  116_PopulatingNextRightPointersInEachNode.cpp  120_triangle.cpp  130_SurroundedRegions.cpp  139_WordBreak.cpp  153_FindMinimumInRotatedSortedArray.cpp  162_FindPeakElement.cpp  167_TwoSumiiInputArrayIsSorted.cpp  17_LetterCombinationsOfAPhoneNumber.cpp  190_ReverseBits.cpp  191_NumberOf1Bits.cpp  19_RemoveNthNodeFromEndOfList.cpp  201_BitwiseAndOfNumbersRange.cpp  213_HouseRobber2.cpp  22_GenerateParenthesis.cpp  231_PowerOfTwo.cpp  278_FirstBadVersion.cpp  322_CoinChange.cpp  33_SearchInRotatedSortedArray.cpp  343_IntegerBreak.cpp  34_FindFirstAndLastPositionOfElementInSortedArray.cpp  35_SearchInsertPosition.cpp  39_CombinationSum.cpp  3_LongestSubstringWithoutRepeatingCharacters.cpp  40_CombinationSum2.cpp  413_ArithmeticSlices.cpp  438_FindAllAnagramsInAString.cpp  45_JumpGame2.cpp  46_Permutations.cpp  47_Permutations2.cpp  547_NumberOfProvinces.cpp  55_JumpGame.cpp  567_PermutationInString.cpp  572_SubtreeOfAnotherTree.cpp  583_DeleteOperationForTwoStrings.cpp  5_LongestPalindromicSubstring.cpp  617_MergeTwoBinaryTrees.cpp  62_UniquePaths.cpp  673_NumberOfLongestIncreasingSubsequence.cpp  (+21 more)
AllAboutArray/: 11_ContainerWithMostWater.cpp  125_ValidPalindrome.cpp  209_MinimumSizeSubarraySum.cpp  215_KthLargestElementInAnArray.cpp  26_RemoveDuplicatesFromSortedArray.cpp  27_RemoveElement.cpp  283_MoveZeroes.cpp  345_ReverseVowelsOfAString.cpp  75_SortColors.cpp  80_RemoveDuplicatesFromSortedArray2.cpp  88_MergeSortedArray.cpp  CMakeLists.txt
AllAboutLockupTable/: 149_MaxPointsOnALine.cpp  15_3sum.cpp  18_4sum.cpp  242_ValidAnagram.cpp  447_NumberOfBoomerangs.cpp  451_SortCharactersByFrequency.cpp  CMakeLists.txt
ArrayAndString/: 118_PascalsTriangle.cpp  119_PascalsTriangle2.cpp  14_LongestCommonPrefix.cpp  151_ReverseWordsInAString.cpp  209_MinimumSizeSubarraySum.cpp  283_MoveZeroes.cpp  28_ImplementStrstr.cpp  344_ReverseString.cpp  35_SearchInsertPosition.cpp  485_MaxConsecutiveOnes.cpp  498_DiagonalTraverse.cpp  557_ReverseWordsInAString3.cpp  561_ArrayPartition1.cpp  56_MergeIntervals.cpp  5_LongestPalindromicSubstring.cpp  724_FindPivotIndex.cpp  CMakeLists.txt  Lcci_1_7_RotateMatrix.cpp
BinarySearch/: 1337_TheKWeakestRowsInAMatrix.cpp  1346_CheckIfNAndItsDoubleExist.cpp  1351_CountNegativeNumbersInASortedMatrix.cpp  1385_FindTheDistanceValueBetweenTwoArrays.cpp  1539_KthMissingPositiveNumber.cpp  153_FindMinimumInRotatedSortedArray.cpp  154_FindMinimumInRotatedSortedArray2.cpp  1608_SpecialArrayWithXElementsGreaterThanOrEqualX.cpp  162_FindPeakElement.cpp  167_TwoSumiiInputArrayIsSorted.cpp  1855_MaximumDistanceBetweenAPairOfValues.cpp  278_FirstBadVersion.cpp  287_FindTheDuplicateNumber.cpp  33_SearchInRotatedSortedArray.cpp  34_FindFirstAndLastPositionOfElementInSortedArray.cpp  367_ValidPerfectSquare.cpp  374_GuessNumberHigherOrLower.cpp  410_SplitArrayLargestSum.cpp  441_ArrangingCoins.cpp  4_MedianOfTwoSortedArrays.cpp  50_PowxN.cpp  658_FindKClosestElements.cpp  69_Sqrtx.cpp  704_BinarySearch.cpp  719_FindKThSmallestPairDistance.cpp  744_FindSmallestLetterGreaterThanTarget.cpp  74_SearchA2dMatrix.cpp  852_PeakIndexInAMountainArray.cpp  CMakeLists.txt
BinarySearchTree/: CMakeLists.txt
BinaryTree/: 101_SymmetricTree.cpp  144_BinaryTreePreorderTraversal.cpp  145_BinaryTreePostorderTraversal.cpp  94_BinaryTreeInorderTraversal.cpp  CMakeLists.txt  InPostBuildTree.cpp
DataStructureBinaryTree/: 101_SymmetricTree.cpp  102_BinaryTreeLevelOrder.cpp  104_MaximumDepthOfBinaryTree.cpp  105_ConstructBinaryTreeFromPreorderAndInorderTraversal.cpp  106_ConstructBinaryTreeFromInorderAndPostorderTraversal.cpp  112_PathSum.cpp  116_PopulatingNextRightPointersInEachNode.cpp  117_PopulatingNextRightPointersInEachNode2.cpp  144_BinaryTreePreorderTraversal.cpp  145_BinaryTreePostorderTraversal.cpp  236_LowestCommonAncestorOfABinaryTree.cpp  297_SerializeAndDeserializeBinaryTree.cpp  94_BinaryTreeInorderTraversal.cpp  CMakeLists.txt  lcci_3_1_ThreeInOne.cpp
DataStructures/: 119_PascalsTriangle_ii.cpp  15_3sum.cpp  169_MajorityElement.cpp  187_RepeatedDnaSequences.cpp  1_TwoSum.cpp  203_RemoveLinkedListElements.cpp  217_ContainsDuplicate.cpp  21_MergeTwoSortedLists.cpp  226_InvertBinaryTree.cpp  232_ImplementQueueUsingStacks.cpp  240_SearchA2dMatrix2.cpp  (+30 more)
LCCI/: 1_7_RotateMatrix.cpp  1_8_ZeroMatrix.cpp  3_1_ThreeInOne.cpp  CMakeLists.txt
NAryTree/: 429_NAryTreeLevelOrderTraversal.cpp  559_MaximumDepthOfNAryTree.cpp  589_NAryTreePreorderTraversal.cpp  590_NAryTreePostorderTraversal.cpp  CMakeLists.txt
Trie/: 208_ImplementTriePrefixTree.cpp  211_DesignAddAndSearchWordsDataStructure.cpp  212_WordSearch2.cpp  336_PalindromePairs.cpp  421_MaximumXorOfTwoNumbersInAnArray.cpp  648_ReplaceWords.cpp  677_MapSumPairs.cpp  CMakeLists.txt
(+288 files in other folders)
