project("LeetCode")
set(CMAKE_CXX_STANDARD 20)
add_subdirectory(googletest)
enable_testing()
include_directories(include)
add_subdirectory(include)
add_subdirectory(IntroductionToDataStructureBinarySearchTree)
add_subdirectory(DataStructureBinaryTree)
add_subdirectory(Algorithms)
add_subdirectory(DataStructures)
add_subdirectory(DynamicProgramming)
add_subdirectory(ArrayAndString)
add_subdirectory(TopInterviewQuestionsEasy)
add_subdirectory(LinkedList)
add_subdirectory(AllAboutArray)
add_subdirectory(QueueStack)
add_subdirectory(BinarySearch)
add_subdirectory(HashTable)
add_subdirectory(NAryTree)
add_subdirectory(AllAboutLockupTable)
add_subdirectory(Trie)
add_subdirectory(DesigningDataStructures)
add_subdirectory(LCCI)
add_subdirectory(ICOF)