cmake_minimum_required(VERSION 3.16)
project("LeetCode")
set(CMAKE_CXX_STANDARD 20)
add_subdirectory(googletest)
enable_testing()
include_directories(include)
include_directories(googletest/googletest/include)
include_directories(googletest/googlemock/include)
add_subdirectory(IntroductionToDataStructureBinarySearchTree)
add_subdirectory(DataStructureBinaryTree)
add_subdirectory(Algorithms)
add_subdirectory(DataStructures)
add_subdirectory(DynamicProgramming)
add_subdirectory(ArrayAndString)
add_subdirectory(TopInterviewQuestionsEasy)
add_subdirectory(LinkedList)
add_subdirectory(AllAboutArray)
add_subdirectory(QueueStack)
add_subdirectory(BinarySearch)
add_subdirectory(HashTable)
add_subdirectory(NAryTree)
add_subdirectory(AllAboutLockupTable)
add_subdirectory(Trie)
add_subdirectory(DesigningDataStructures)
add_subdirectory(LCCI)
add_subdirectory(ICOF)
add_subdirectory(IllustrationOfAlgorithm)
add_subdirectory(EfficientWinning)
add_subdirectory(Problems)
add_subdirectory(ProgrammingSkills)
add_subdirectory(Graph)
add_subdirectory(Lccup)
add_subdirectory(Espressif)
add_subdirectory(LCP)