project("LCCI")
include_directories(${PROJECT_SOURCE_DIR}/include)
aux_source_directory(. lcci)
foreach(T_FILE_NAME ${lcci})
    string(REGEX REPLACE ".cpp" "" EXECUTABLE_NAME ${T_FILE_NAME})
    string(REGEX REPLACE "\.\/" "" EXECUTABLE_NAME ${EXECUTABLE_NAME})
    add_executable(${EXECUTABLE_NAME} ${T_FILE_NAME})
    target_link_libraries(${EXECUTABLE_NAME} gtest_main gmock_main headers)
    # gtest_discover_tests(${EXECUTABLE_NAME})
    add_test(test_all ${EXECUTABLE_NAME})
endforeach()