aux_source_directory(. NARYTREE)
foreach(T_FILE_NAME ${NARYTREE})
    string(REGEX REPLACE "\./(.+)\.cpp" "\\1" EXECUTABLE_NAME ${T_FILE_NAME})
    add_executable(${EXECUTABLE_NAME} ${T_FILE_NAME})
    target_link_libraries(${EXECUTABLE_NAME} gtest_main gmock_main)
    add_test(test_all ${EXECUTABLE_NAME})
endforeach()